src/visualization-dashboard/tiddlywiki-ui/PageLayout/style.css
div.tc-page-container.visualization-dashboard-layout-container {
  margin-top: 0px;
  height: 100vh;
  width: 100%;
}
.visualization-dashboard-layout-main-area {
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
}
.visualization-dashboard-draggable-region {
  cursor: grab;
  -webkit-app-region: drag;
}
.visualization-dashboard-layout-gauge-list-container {
  display: grid;
  grid-column-gap: 10px;
  grid-auto-rows: 415px;
}
.visualization-dashboard-layout-gauge-item-container {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
}
.visualization-dashboard-layout-gauge-item-title {
  margin-top: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.visualization-dashboard-layout-gauge-item-body {
  display: flex;
  flex-direction: column;
  flex: 5;
  align-items: center;
  justify-content: center;
  margin-top: 1em;
  width: 100%;
}
.visualization-dashboard-layout-gauge-item-body > p {
  width: 100%;
  height: 100%;
  margin: 0;
}

